--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,17 @@
+/*Fonte*/
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap');
+/*Componentes*/
 @import "./header.css";
+@import"./buttons.css";
 
+/*Resete css*/
 * {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
+  font-family: 'Source Sans Pro', sans-serif;
   vertical-align: baseline;
+  text-decoration: none;
 }
