--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 /*Componentes*/
 @import "./header.css";
 @import"./buttons.css";
+@import"./main.css";
 
 /*Resete css*/
 * {
@@ -12,6 +13,7 @@
   font-size: 100%;
   font: inherit;
   font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
   vertical-align: baseline;
   text-decoration: none;
 }
