--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 @import "./header.css";
 @import"./buttons.css";
 @import"./main.css";
+@import"./footer.css";
 
 /*Resete css*/
 * {
@@ -16,6 +17,14 @@
   font-weight: 300;
   vertical-align: baseline;
   text-decoration: none;
+  list-style: none;
+}
+
+body {
+  background-image: url('../bolha-background.png');
+  background-repeat: no-repeat;
+  background-position: left center;
+
 }
 
 .container {
