--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,12 @@
 /*Fonte*/
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap');
 /*Componentes*/
+@import "./bootstrap.css";
 @import "./header.css";
 @import"./buttons.css";
 @import"./main.css";
 @import"./footer.css";
+@import"./responsive-background.css";
+@import "./responsive-elementos.css";
 
 /*Resete css*/
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300;
-  vertical-align: baseline;
-  text-decoration: none;
-  list-style: none;
-}
-
-body {
-  background-image: url('../bolha-background.png');
-  background-repeat: no-repeat;
-  background-position: left center;
-
-}
-
-.container {
-  width: 1024px;
-  margin: 30px auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
